deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1  
  selector:
    matchLabels:
      tier: backend

  template:
    metadata:
      labels:
        tier: backend    
    spec:
      containers:
      - name: backend
        image: jakob.azurecr.io/qboxcoreapi:0.1
---
kind: Service
apiVersion: v1
metadata:
  name:  api
spec:
  selector:
    tier: backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
