deploy/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: db
  template:
    metadata:
      labels:
        tier: db
    spec:
      containers:
      - name: db
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
          - containerPort: 1433
---
kind: Service
apiVersion: v1
metadata:
  name:  db
spec:
  selector:
    tier: db
  type:  ClusterIP
  ports:
  - name:  sql
    port:  1433
    targetPort:  1433
