deploy/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aksdemo
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aksdemo.ehn.nu
        - aksdemo-canary.ehn.nu
      secretName: tls-secret
  rules:
  - host: aksdemo.ehn.nu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
              
  - host: aksdemo-canary.ehn.nu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-canary
            port:
              number: 80
